01: added some ipc stuff

--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <body>
     <section id="main">
       <h1>Dev screen timer</h1>
-      <div id="interval">
-        <input id="timespan" placeholder="Alert Time Interval"></input>
-        <button id="beginBtn">Begin</button>
-      </div>
-      <div id="dismiss-counter">
+      <button id="beginBtn">Begin</button>
+      <div id="counter">
       </div>
     </section>
     <script src="./alert.js" />
