--- a/alert.html
+++ b/alert.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="alert">
+      <button id="endBtn">End</button>
       <div id="warning">
         <h1>Look away from your screen for a hot second, fam</h1>
       </div>
